# eclipse

./: CMakeLists.txt  README.md  eclipse.pc.in
include/: colours.h  logger.h
src/: colours.cpp  logger.cpp  main.cpp
